--- a/templates/home.html
+++ b/templates/home.html
@@ -1,5 +1,3 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
-        "http://www.w3.org/TR/html4/loose.dtd">
 {% extends "base.html" %}
 
 {% block content %}
@@ -9,4 +7,5 @@
     <p>{{ post.body }}</p>
 </div>
 {% endfor %}
+{% include "pagination.html" %}
 {% endblock content %}
