--- a/templates/post_detail.html
+++ b/templates/post_detail.html
@@ -15,7 +15,7 @@
 {% for comment in comments %}
     <div class="comment">
         <p class="info">
-            Comment {{ forloop.counter }} by {{ comment.name }}
+            Comment {{ forloop.counter }} by {{ comment.title }}
             {{ comment.created }}
         </p>
         {{ comment.body|linebreaks }}
@@ -24,17 +24,8 @@
     <p>There are no comments yet.</p>
 {% endfor %}
 
-{% if new_comment %}
-    <h2>Your comment has been added.</h2>
-{% else %}
-    <h2>Add a new comment</h2>
-    <form action="." method="post">
-        {{ comment_form.as_p }}
-        {% csrf_token %}
-        <p><input type="submit" value="Add comment"></p>
-    </form>
-{% endif %}
 
+<p><a href="{% url 'post_comment' post.pk %}">+ Comment</a></p>
 <p><a href="{% url 'post_edit' post.pk %}">+ Edit Blog Post</a></p>
 <p><a href="{% url 'post_delete' post.pk %}">+ Delete Blog Post</a></p>
 
